Navigation on chapters complete

--- a/_includes/sidemenu.html
+++ b/_includes/sidemenu.html
@@ -31,7 +31,7 @@
 
 			{% for n in nav %}
 
-				<li><a href="#{{ n | replace: "?" , "" | split: " " | join: "-" | downcase }}">{{ n }}</a></li>
+				<li><a href="#{{ n | replace: "?" , "" | replace: "&#58;", "" | replace: "'", "" | replace: ",", "" | replace: "&", "38" | replace: ".", "" | split: " " | join: "-" | downcase }}">{{ n }}</a></li>
 
 			{% endfor %}
 
