--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,7 +38,7 @@ layout: default
       {% for n in nav %}
 
 
-        <li><a href="#{{ n | replace: "?", "" |  split: " "| join: "-" | downcase }}">{{ n }}</a></li>
+        <li><a href="#{{ n | replace: "?" , "" | replace: "&#58;", "" | replace: "'", "" | replace: ",", "" | replace: "&", "38" | replace: ".", "" | split: " " | join: "-" | downcase }}">{{ n }}</a></li>
 
       {% endfor %}
 
