All chapters markdown complete

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -214,7 +214,8 @@ p strong, .chnum{
 **/
 
 ul{
-    list-style: url("../img/curls-list-2.png");
+    list-style: url("../img/hand-list.png");
+    //list-style: url("../img/curls-list-2.png");
     padding: 0 0 0 10px;
 
 }
