Slides in pdf and pptx added

--- a/_includes/sideslides.html
+++ b/_includes/sideslides.html
@@ -7,7 +7,7 @@
 
 
 		<div class="download">
-			<a href="{{ "/assets/slides/responsible-data-handbook-slides.pdf" | prepend: site.baseurl }}" target="_blank"><h6>
+			<a href="{{ "/assets/slides/responsible-data-handbook-slides-pdf.zip" | prepend: site.baseurl }}" target="_blank"><h6>
 				Download All Slides as PDF
 			</h6></a>
 
@@ -15,7 +15,7 @@
 
 		<div class="download">
 
-			<a href="{{ "/assets/slides/responsible-data-handbook-slides.pptx" | prepend: site.baseurl }}" target="_blank"><h6>
+			<a href="{{ "/assets/slides/responsible-data-handbook-slides-pptx.zip" | prepend: site.baseurl }}" target="_blank"><h6>
 				Download All Slides as Powerpoint
 			</h6></a>
 		</div>
