--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -20,6 +20,8 @@ $base-line-height: 1.7;
 
 $spacing-unit:     30px;
 
+$title-color: 	   #fcd800;
+
 $text-color:       #111;
 $background-color: #fff;
 $brand-color:      #2a7ae2;
@@ -33,7 +35,7 @@ $grey-color-dark:  darken($grey-color, 25%);
 // Width of the content area
 $content-width:    800px;
 
-$on-palm:          600px;
+$on-palm:          615px;
 $on-laptop:        850px;
 $md-col-break: 	   990px;
 $slide-page-break: 1000px;
