--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -513,7 +513,8 @@
         h3 {
             font-size: 25px;
             text-transform: capitalize;
-            padding-left: 45px;
+            line-height: 1em;
+            padding: 0 0 5px 45px;
             font-variant: small-caps;
             margin-bottom: 0;
             background:  url("../img/curls-list-2.png") no-repeat left center;
@@ -950,6 +951,7 @@
                 padding: 20px;
                 min-height: 100px;
                 border: 4px solid $red-color;
+                background-color: $yellow-color;
 
 
             }
