--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -609,7 +609,7 @@ ul { list-style: url("../img/hand-list.png"); padding: 0 0 0 10px; }
 .post .post-content { margin-bottom: 30px; }
 .post .post-content h2 { font-size: 30px; padding: 20px 0; color: #cd1619; font-variant: small-caps; margin-bottom: 0; }
 @media screen and (max-width: 850px) { .post .post-content h2 { font-size: 25px; } }
-.post .post-content h3 { font-size: 25px; text-transform: capitalize; padding-left: 45px; font-variant: small-caps; margin-bottom: 0; background: url("../img/curls-list-2.png") no-repeat left center; }
+.post .post-content h3 { font-size: 25px; text-transform: capitalize; line-height: 1em; padding: 0 0 5px 45px; font-variant: small-caps; margin-bottom: 0; background: url("../img/curls-list-2.png") no-repeat left center; }
 @media screen and (max-width: 850px) { .post .post-content h3 { font-size: 20px; } }
 .post .post-content h4 { font-size: 18px; text-transform: capitalize; color: #1B1E1F; font-style: bolder; margin-bottom: 0; }
 @media screen and (max-width: 850px) { .post .post-content h4 { font-size: 16px; } }
@@ -696,7 +696,7 @@ ul { list-style: url("../img/hand-list.png"); padding: 0 0 0 10px; }
 .sliderow a, .handbookrow a { padding: 0; }
 .sliderow a h6, .handbookrow a h6 { text-align: center; padding: 0; margin: 0; color: #cd1619; line-height: 1.2em; letter-spacing: 0.07em; font-size: 20px; vertical-align: middle; text-transform: uppercase; }
 .sliderow a:hover, .handbookrow a:hover { color: #cd1619; text-decoration: none; }
-.sliderow .button, .handbookrow .button { padding: 20px; min-height: 100px; border: 4px solid #cd1619; }
+.sliderow .button, .handbookrow .button { padding: 20px; min-height: 100px; border: 4px solid #cd1619; background-color: #faf8ec; }
 @media screen and (max-width: 990px) { .sliderow, .handbookrow { padding: 10px 0 0 0; }
   .sliderow .button, .handbookrow .button { padding: 20px; min-height: auto; margin: 20px 0; }
   .sliderow .sliderow h6, .handbookrow .sliderow h6 { font-size: 18px; } }
