--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -591,6 +591,8 @@ ul { list-style: url("../img/hand-list.png"); padding: 0 0 0 10px; }
 .post-link { display: block; font-size: 24px; }
 
 /** Posts */
+.post .fixedtop { position: fixed; top: 10px; right: 10px; width: 25px; }
+.post .fixedbottom { position: fixed; bottom: 10px; right: 10px; width: 25px; }
 .post .post-header { margin-top: 15px; margin-bottom: 30px; }
 .post .post-header h3 { color: #cd1619; text-transform: uppercase; font-size: 35px; text-align: center; }
 .post .post-header .numwrapper { position: relative; width: 95%; margin: 0 auto; }
