title color change and footer fix

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,10 +19,7 @@
 
             <img src="{{ "/assets/img/engineroom.png" | prepend: site.baseurl }}" />
 
-            <div class="datadesc">
-              <p>Responsible Data Reflection Stories, 2016. This publication is part series found at <a href="https://responsibledata.io" target="_blank">https://responsibledata.io</a>, produced by the engine room Responsible Data Program, 2016.</p>
-            </div>
-
+            <div class="datadesc"><p>Responsible Data in Development Toolkit, 2016. This publication is part of a series found at <a href="https://responsibledata.io" target="_blank">https://responsibledata.io</a>, produced by the engine room Responsible Data Program, 2016.</p></div>
         </div>
 
       </div>
