--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,9 +8,9 @@
 /*FONTS from css/font/stylesheet.css */
 $base-font-family: "latolight", Helvetica, Arial, sans-serif;
 $bold-font-family: "gentium_basicbold", Helvetica, Arial, sans-serif;
-$title-font-family: "alegreyabold", Georgia, Times, serif; 
-$menu-font-family: "montserratregular", Georgia, Times, serif; 
-$fancy-font-family: "trattatelloregular", Georgia, Times, serif; 
+$title-font-family: "alegreyabold", Georgia, Times, serif;
+$menu-font-family: "montserratregular", Georgia, Times, serif;
+$fancy-font-family: "trattatelloregular", Georgia, Times, serif;
 
 $base-font-size:   16px;
 $base-font-weight: 500;
@@ -20,7 +20,7 @@ $base-line-height: 1.7;
 
 $spacing-unit:     30px;
 
-$title-color: 	   #fcd800;
+$title-color: 	   #cd1619;
 
 $text-color:       #111;
 $background-color: #fff;
