adding red highlight to nav

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,11 +17,11 @@
             <li id="menu-item-153" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-153"><a href="https://responsibledata.io/about/">About</a></li>
             <li id="menu-item-204" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-204"><a href="https://responsibledata.io/events/">Events</a></li>
             <li id="menu-item-921" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-921"><a href="https://responsibledata.io/blog/">Blog</a></li>
-            <li id="menu-item-768" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-768"><a href="https://responsibledata.io/category/resources/">Resources</a></li>
-            </ul>       
-        
+            <li id="menu-item-768" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-768"><a class="current" href="https://responsibledata.io/category/resources/">Resources</a></li>
+          </ul>
+
         </nav>
-        
+
         <div class="clear"></div>
 
 
