--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -26,6 +26,7 @@ $text-color:       #111;
 $background-color: #fff;
 $brand-color:      #2a7ae2;
 $red-color:        #cd1619;
+$highlight-nav:    #ff0200;
 $yellow-color: 	   #faf8ec;
 $black-color: 	   #1B1E1F;
 $grey-color:       #1B1E1F;
