--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -108,6 +108,9 @@
                             font-size: 14px;
                             padding: 0.5em 1em;
                         }
+                        a.current{
+                            color: $highlight-nav;
+                        }
                     }
                 }
             }
