adding logo for hivos to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,18 +8,25 @@
       <div class="row">
 
 
-        <div class="col-md-6">
+        <div class="col-md-4">
             <img src="{{ "/assets/img/creativecommons_logo.png" | prepend: site.baseurl }}" />
 
             <p>Licensed under Creative Commons Attribution-ShareAlike 4.0 International License. (CC-BY-SA 4.0)</p>
 
         </div>
 
-        <div class="col-md-6">
+        <div class="col-md-4">
 
             <img src="{{ "/assets/img/engineroom.png" | prepend: site.baseurl }}" />
 
             <div class="datadesc"><p>Responsible Data in Development Toolkit, 2016. This publication is part of a series found at <a href="https://responsibledata.io" target="_blank">https://responsibledata.io</a>, produced by the engine room Responsible Data Program, 2016.</p></div>
+        </div>
+
+        <div class="col-md-4">
+
+            <img src="{{ "/assets/img/logo-hivos.jpg" | prepend: site.baseurl }}" />
+
+            <div class="datadesc"><p>With generous support from <a href="https://www.hivos.nl/">Hivos</a>.</p></div>
         </div>
 
       </div>
