add slides and reduce buttons on slides page

--- a/_includes/sideslides.html
+++ b/_includes/sideslides.html
@@ -10,13 +10,17 @@
 			<a href="{{ "/assets/slides/responsible-data-handbook-slides-pdf.zip" | prepend: site.baseurl }}" target="_blank"><h6>
 				Download All Slides as PDF
 			</h6></a>
-
 		</div>
 
 		<div class="download">
-
 			<a href="{{ "/assets/slides/responsible-data-handbook-slides-pptx.zip" | prepend: site.baseurl }}" target="_blank"><h6>
-				Download All Slides as Powerpoint
+				Download All Slides as PPT
+			</h6></a>
+		</div>
+
+		<div class="download">
+			<a href="{{ "https://drive.google.com/folderview?id=0B0e_IAorAd5-MF9sdHpCcjNaOEE&usp=sharing" | prepend: site.baseurl }}" target="_blank"><h6>
+				View All Slides as Google Slides
 			</h6></a>
 		</div>
 
