--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1053,8 +1053,8 @@
             h6{
                 text-transform: uppercase;
                 color: $black-color;
-                width: 100px;
-                font-size: 20px;
+                //width: 100px;
+                font-size: 15px;
                 float: left;
                 padding: 0 25px 0 0;
 
@@ -1158,7 +1158,7 @@
 
                     cursor: pointer;
                     float: left;
-                    width: 100px;
+                    //width: 100px;
 
                     padding: 0 25px 0 0;
                     color: $black-color;
@@ -1229,7 +1229,7 @@
 
     #sidemenu{
         .download{
-            padding: 40px 30px;
+            padding: 30px 30px;
             h6{
                 line-height: 1em;
                 font-size: 19px;
