testing new travis script

--- a/_includes/sideslides.html
+++ b/_includes/sideslides.html
@@ -19,7 +19,7 @@
 		</div>
 
 		<div class="download">
-			<a href="{{ "https://drive.google.com/folderview?id=0B0e_IAorAd5-MF9sdHpCcjNaOEE&usp=sharing" | prepend: site.baseurl }}" target="_blank"><h6>
+			<a href="https://drive.google.com/folderview?id=0B0e_IAorAd5-MF9sdHpCcjNaOEE&usp=sharing" target="_blank"><h6>
 				View All Slides as Google Slides
 			</h6></a>
 		</div>
