--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1452,16 +1452,17 @@ ul {
   padding: 30px 0; }
   .site-footer .col-xs-10 {
     border-top: 20px solid black; }
-    .site-footer .col-xs-10 .col-md-6 {
+    .site-footer .col-xs-10 .col-md-4 {
       margin: 20px 0 0 0;
       padding: 20px 0 0 0; }
   .site-footer img {
-    width: 20%;
+    width: 30%;
     float: left; }
   .site-footer p {
-    padding: 0 10px 30px 30px;
-    width: 80%;
-    float: left; }
+    padding: 0 30px 30px 30px;
+    width: 70%;
+    float: left;
+    font: 500 14px/1.7 "latolight", Helvetica, Arial, sans-serif; }
   .site-footer a {
     color: #cd1619; }
     .site-footer a:hover {
@@ -1921,7 +1922,6 @@ img.first {
   .grid-item a h6 {
     text-transform: uppercase;
     color: #1B1E1F;
-    width: 100px;
     font-size: 20px;
     float: left;
     padding: 0 25px 0 0; }
@@ -1971,7 +1971,6 @@ img.first {
   .slides .grid-item-slides a {
     cursor: pointer;
     float: left;
-    width: 100px;
     padding: 0 25px 0 0;
     color: #1B1E1F; }
     .slides .grid-item-slides a h6 {
@@ -2001,7 +2000,7 @@ img.first {
       max-width: 90%; } }
 
 .slidepage #sidemenu .download {
-  padding: 40px 30px; }
+  padding: 30px 30px; }
   .slidepage #sidemenu .download h6 {
     line-height: 1em;
     font-size: 19px; }
