--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,12 +9,15 @@
   <link rel="shortcut icon" href="{{ "/assets/img/RD-favicon.png" | prepend: site.baseurl }}" />
   <link rel="stylesheet" type="text/css" href="{{ "/assets/css/font/stylesheet.css" | prepend: site.baseurl }}" />
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
+  <link rel="stylesheet" href="{{ "/assets/css/nav.css" | prepend: site.baseurl }}">
+  <!--  <link rel="stylesheet" href="assets/css/nav.css"> -->
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
   	<script src="{{ "/assets/js/jquery-1.12.2.min.js" | prepend: site.baseurl }}"></script>
   	<script src="{{ "/assets/js/application.js" | prepend: site.baseurl }}"></script>
-
+    <script src="https://use.fontawesome.com/c0c6ed85fc.js"></script>
 <!-- Social meta -->
 
 <meta name="twitter:card" content="summary_large_image">
