--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,41 @@
-<header id="header" class="site-header">
+
+<nav id="responsibledata-main-nav">
+	<div class="header">
+		<div class="row">
+			<div class="logo ">
+
+
+				<a href="https://responsibledata.io"><img src="https://responsibledata.io/wp-content/themes/wp-responsibledata/assets/rd-logo.svg" alt="ResponsibleDataForum - Logo" title="Responsible Data"></a>
+			</div>
+			<div class="mobile-nav"><button type="button" class="mobile-nav-toggle" data-target=".head-navigation"><i class="fa fa-bars"></i></button></div>
+			<div class="head-navigation">
+				<div class="menu-main-navigation-container"><ul id="menu-main-navigation" class="menu"><li id="menu-item-17" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-17"><a href="https://responsibledata.io/about/">About</a></li>
+<li id="menu-item-2885" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-2885"><a href="https://responsibledata.io/category/resources/">Resources</a>
+<ul class="sub-menu">
+	<li id="menu-item-2553" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-2553"><a href="https://responsibledata.io/category/resources/analysis/">Analysis</a></li>
+	<li id="menu-item-2666" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-2666"><a href="https://responsibledata.io/category/resources/events/">Events</a></li>
+	<li id="menu-item-2554" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-2554"><a href="https://responsibledata.io/category/resources/exercises/">Exercises</a></li>
+	<li id="menu-item-2555" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-2555"><a href="https://responsibledata.io/category/resources/experiences/">Experiences</a></li>
+	<li id="menu-item-2556" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-2556"><a href="https://responsibledata.io/category/resources/guides/">Guides</a></li>
+	<li id="menu-item-2557" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-2557"><a href="https://responsibledata.io/category/resources/tools/">Tools</a></li>
+</ul>
+</li>
+<li id="menu-item-15" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-15"><a href="https://responsibledata.io/get-involved/">Get Involved</a></li>
+</ul></div>			</div><div class="search-form">
+							<form role="search" method="get" id="searchform" class="searchform" action="/">
+				<div>
+					<label class="screen-reader-text" for="s">Search for:</label>
+					<input type="text" value="" name="s" id="s">
+					<button type="submit" id="searchsubmit"><i class="fa fa-search"></i></button>
+				</div>
+			</form>
+			</div>
+
+		</div>
+	</div>
+</nav>
+
+<!-- <header id="header" class="site-header">
   <div class="container">
     <div class="wrapperhead">
         <div id="logo">
@@ -34,4 +71,4 @@
 
   </div>
 
-</header>
+</header> -->
